--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cheerio": "^1.0.0-rc.3",
     "mysql": "^2.18.1",
     "puppeteer": "^5.2.0",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
   }
