--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "node-cron": "^2.0.3",
     "puppeteer": "^5.2.0",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.1",
